--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,18 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install cf client
       env:
-        CF_CLI_VERSION: 7.0.0-beta.28
+        CF_CLI_VERSION: v7
       run: |
         curl -L "https://packages.cloudfoundry.org/stable?release=linux64-binary&version=${CF_CLI_VERSION}" | tar -zx -C /tmp
-        sudo cp /tmp/cf7 /usr/local/bin/cf7
+        sudo cp /tmp/cf7 /usr/local/bin/cf
 
     - name: Deploy to Cloudfoundry
       env:
         CF_USERNAME: ${{ secrets.CF_USERNAME }}
         CF_PASSWORD: ${{ secrets.CF_PASSWORD }}
       run: |
-        cf7 api api.london.cloud.service.gov.uk
-        cf7 auth
-        cf7 target -o 'beis-opss' -s sandbox
-        cf7 push
-        cf7 logout
+        cf api api.london.cloud.service.gov.uk
+        cf auth
+        cf target -o 'beis-opss' -s sandbox
+        cf push
+        cf logout
