Add PR trigger for testing

--- a/.github/workflows/publish_css_changes.yml
+++ b/.github/workflows/publish_css_changes.yml
@@ -2,6 +2,7 @@ name: Push changes to services
 
 on:
   workflow_dispatch: # Allows manual trigger
+  pull_request: # For testing
   push:
     branches:
       - master
