--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "scripts": {
     "start": "node start",
     "build": "node lib/build/generate-assets",
-    "serve": "node listen-on-port"
+    "serve": "node listen-on-port",
+    "lint": "stylelint app/assets/{javascripts,sass}"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-gds/scss",
+      "./css-rules"
+    ]
   },
   "dependencies": {
     "@govuk-prototype-kit/step-by-step": "^2.0.0",
@@ -41,6 +48,8 @@
     "portscanner": "^2.1.1",
     "require-dir": "^1.0.0",
     "sass": "^1.49.10",
+    "stylelint": "^14.16.1",
+    "stylelint-config-gds": "^0.2.0",
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.5.3",
     "uuid": "^8.3.2"
