Explicitly run npm install

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,4 +13,5 @@ jobs:
         with:
           node-version: 16.15.0
           cache: "npm"
+      - run: npm install
       - run: npm run-script lint
