--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "scripts": {
     "start": "node start",
     "build": "node lib/build/generate-assets",
-    "serve": "node listen-on-port"
+    "serve": "node listen-on-port",
+    "lint": "stylelint app/assets/sass"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-gds/scss",
+      "./css-rules"
+    ]
   },
   "dependencies": {
     "@govuk-prototype-kit/step-by-step": "^2.0.0",
@@ -44,5 +51,9 @@
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.5.3",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "stylelint": "^14.16.1",
+    "stylelint-config-gds": "^0.2.0"
   }
 }
