fixed scss formatting settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.formatOnSave": true,
     "files.insertFinalNewline": true,
     "editor.tabSize": 2,
-    "html.format.wrapLineLength": 0
+    "html.format.wrapLineLength": 0,
+    "scss.format.spaceAroundSelectorSeparator": true
 }
