active hover states fixed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "files.insertFinalNewline": true,
     "editor.tabSize": 2,
     "html.format.wrapLineLength": 0,
-    "scss.format.spaceAroundSelectorSeparator": true
+    "scss.format.spaceAroundSelectorSeparator": true,
+    "scss.format.enable": false
 }
